--- a/src/pages/app/session/index.astro
+++ b/src/pages/app/session/index.astro
@@ -1,6 +1,6 @@
 ---
 import Layout from "@layout";
-import Study from "@app/flashcards/session/components";
+import Study from "@app/session/components";
 import { getUserSsr } from "@app/user/auth/controllers";
 
 const userdata = await getUserSsr(Astro);
