--- a/src/shared/layout/index.astro
+++ b/src/shared/layout/index.astro
@@ -46,7 +46,7 @@ const { userdata } = Astro.props
 			// On page load or when changing themes, best to add inline in `head` to avoid FOUC
 		</script>
 
-		<script src="./tailmater.js"></script>
+		<!-- <script src="./tailmater.js"></script> -->
 		<style>
 			/* deactivate text selection */
 			*[contenteditable="true"],
