--- a/src/pages/app/index.astro
+++ b/src/pages/app/index.astro
@@ -2,12 +2,10 @@
 import Layout from "@layout";
 import Userbook from "@app/userbook/components/List.astro";
 import ListFlashcards from "@app/flashcards/components/FlashCardItem.astro";
-
+import InputHandle from '@app/InputHandle'
 import { getUserSsr } from "@app/user/auth/controllers";
 const userdata = await getUserSsr(Astro);
-if (!userdata) {
-  return Astro.redirect("/");
-}
+
 
 import { getFlashCards } from "@app/flashcards/controllers";
 const flashcards = await getFlashCards({userId: userdata?.id});
@@ -16,6 +14,7 @@ fetch("https://tts-api-96an.onrender.com");
 ---
 
 <Layout userdata={userdata}>
+  
   <div class="container mx-auto mt-14">
     <div
       class="flex flex-col sm:flex-row items-center justify-between gap-4 my-12"
