--- a/src/shared/layout/navigation/Navigator.astro
+++ b/src/shared/layout/navigation/Navigator.astro
@@ -1,12 +1,10 @@
 ---
-import { $user } from "@app/user/model/store";
-
 
 const navigator = [
     {
         title: "home",
         icon: "home",
-        link: $user.get() ? "/app" : "/",
+        link: "/app",
     },
     {
         title: "study",
@@ -25,7 +23,6 @@ const navigator = [
     navigator.map((nav) => (
         <a
             href={nav.link}
-          
             class="w-1/3 md:w-[120px] h-16 px-4 justify-end items-center gap-1 relative py-2 hover:bg-surface-100 dark:hover:bg-surfacedark-100 active flex flex-col sm:flex-row"
         >
             <span class="material-symbols-outlined">{nav.icon}</span>
