try get auth in frontend

--- a/src/app/flashcards/components/FlashCardItem.astro
+++ b/src/app/flashcards/components/FlashCardItem.astro
@@ -4,7 +4,7 @@ import isToday from '@shared/utils/isToday';
 import BtnDelete from "./BtnDelete";
 
 interface Props {
-    flashcard: SPB_FlashCard;
+    flashcard?: SPB_FlashCard;
 }
 
 const { flashcard } = Astro.props;
