--- a/src/shared/layout/index.astro
+++ b/src/shared/layout/index.astro
@@ -4,7 +4,7 @@ import AppBar from "./navigation/AppBar.astro";
 import type { SPB_UserData } from "@app/user/model/schema";
 
 export interface Props {
-	userdata: SPB_UserData | undefined
+	userdata?: SPB_UserData | undefined
 	// title?: string;
 	// verify?: boolean;
 }
